<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2013 The CCP project authors. All Rights Reserved.
 
   Use of this source code is governed by a Beijing Speedtong Information Technology Co.,Ltd license
   that can be found in the LICENSE file in the root of the web site.
 
    				http://www.yuntongxun.com
 
   An additional intellectual property rights grant can be found
   in the file PATENTS.  All contributing project authors may
   be found in the AUTHORS file in the root of the source tree.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/video_bg"
    android:orientation="vertical" >

    <include 
         android:id="@+id/head"
        layout="@layout/ccp_title" />
 <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:scrollbars="none"
        android:fadingEdge="none"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_margin_space" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_space"
            android:paddingLeft="3.0dip"
            android:text="@string/str_chatroom_name"
            android:textColor="#FFFFFFFF"
            android:textSize="19.0sp" />

        <include
            android:id="@+id/room_name"
            layout="@layout/ccp_edittext" />

        <LinearLayout
            android:id="@+id/ll_cb_autoclose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_autoclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_check"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_autoclose"
                android:textColor="#9D9D9D"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_cb_autojoin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_autojoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_check"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_autojoin"
                android:textColor="#9D9D9D"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/roometype" />

        <RadioGroup
            android:id="@+id/rg1_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb1_video"
                android:button="@drawable/cb_check"
                android:text="@string/deleteroom"
                android:textColor="#9D9D9D" />

            <RadioButton
                android:id="@+id/rb2_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_check"
                android:text="@string/donotdeleteroom"
                android:textColor="#9D9D9D"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/vociemode" />

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_check"
                android:text="@string/allnoticevoice"
                android:textColor="#9D9D9D" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:button="@drawable/cb_check"
                android:text="@string/onlybgmusic"
                android:textColor="#9D9D9D" />

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:button="@drawable/cb_check"
                android:text="@string/nonevoice"
                android:textColor="#9D9D9D" />
        </RadioGroup>

        <com.voice.demo.views.CCPButton
            android:id="@+id/create_video_c_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_margin_space"
            android:background="@drawable/video_blue_button_selector"
            android:enabled="false" />
    </LinearLayout>
 </ScrollView>
</RelativeLayout>