<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/regist_help_01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_space"
        android:lines="1"
        android:text="@string/experience_regist_help_01"
        android:textAppearance="@style/mode_desc_text_appearance"
        android:textColor="@color/ccp_attentoin_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/experience_down_arrow" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:src="@drawable/regist_help_02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_space"
        android:lines="1"
        android:text="@string/experience_regist_help_02"
        android:textAppearance="@style/mode_desc_text_appearance"
        android:textColor="@color/ccp_attentoin_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:src="@drawable/experience_down_arrow" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:src="@drawable/regist_help_03" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_space"
        android:lines="1"
        android:text="@string/experience_regist_help_03"
        android:textAppearance="@style/mode_desc_text_appearance"
        android:textColor="@color/ccp_attentoin_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:src="@drawable/experience_down_arrow" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:src="@drawable/regist_help_04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_space"
        android:lines="1"
        android:text="@string/experience_regist_help_04"
        android:textAppearance="@style/mode_desc_text_appearance"
        android:textColor="@color/ccp_attentoin_color" />

</LinearLayout>